WindGroup Dev/src/objects/JE_Logic__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Application in the case of Transaction: Cash Receipt</inlineHelpText>
        <label>Bank Name</label>
        <referenceTo>Bank_Information__c</referenceTo>
        <relationshipLabel>JE Logic</relationshipLabel>
        <relationshipName>JE_Logic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <inlineHelpText>Applicable when Transaction: Invoice</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Transaction__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Charge_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>JE Logic</relationshipLabel>
        <relationshipName>JE_Logic</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convert_Negative_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is primarily used to convert Negative Amount to Positive.
Used for Charge Type: Discount &amp; Rebate.</inlineHelpText>
        <label>Convert Negative Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Currency__c</fullName>
        <label>Document Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Header_Detail__c</fullName>
        <label>Header/Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JV_Creation__c</fullName>
        <label>JV Creation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Document Date</fullName>
                </value>
                <value>
                    <fullName>Line Item Start Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JV_Type__c</fullName>
        <inlineHelpText>Invoice (Normal) - Monthly; Ad-Hoc; Misc; Debit Note
Credit Note - Credit Note
Late Payment - Late Payment
Invoice (Advance Rental) - Rent with Charge Type &apos;Advance Rental&apos;</inlineHelpText>
        <label>JV Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Transaction__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>JV_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <inlineHelpText>Application in the case of Transaction: Cash Receipt</inlineHelpText>
        <label>Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Transaction__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Payment_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Posting_Period__c</fullName>
        <label>Posting Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-2</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>+2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Transaction</valueSetName>
        </valueSet>
    </fields>
    <label>JE Logic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Charge_Type__c</columns>
        <columns>Document_Currency__c</columns>
        <columns>Transaction__c</columns>
        <columns>JV_Type__c</columns>
        <columns>Convert_Negative_Amount__c</columns>
        <columns>Posting_Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cash_Receipt_Logic</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Document_Currency__c</columns>
        <columns>Payment_Mode__c</columns>
        <columns>Bank_Name__c</columns>
        <columns>Posting_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction__c</field>
            <operation>equals</operation>
            <value>Cash Receipt</value>
        </filters>
        <label>Cash Receipt Logic</label>
    </listViews>
    <listViews>
        <fullName>Invoice_Logic</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Charge_Type__c</columns>
        <columns>Document_Currency__c</columns>
        <columns>Transaction__c</columns>
        <columns>JV_Type__c</columns>
        <columns>Convert_Negative_Amount__c</columns>
        <columns>Posting_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction__c</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filters>
        <label>Invoice Logic</label>
    </listViews>
    <nameField>
        <displayFormat>JEL-{000000}</displayFormat>
        <label>JE Logic ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JE Logic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mandate_check_for_Transaction_Cash_Rct</fullName>
        <active>true</active>
        <description>Please define Payment Mode and Bank Name</description>
        <errorConditionFormula>AND (
ISPICKVAL( Transaction__c , &quot;Cash Receipt&quot;),
OR(
ISBLANK( Bank_Name__c ), 
ISPICKVAL( Payment_Mode__c , &quot;&quot;) 
)
)</errorConditionFormula>
        <errorMessage>Please define Payment Mode and Bank Name</errorMessage>
    </validationRules>
</CustomObject>